# bamboo-automate

./: CMakeLists.txt  NOTICE  README.md  automate_bamboo.py  external_auth_automate.py
lib/: CMakeLists.txt  __init__.py  bamboo_automate.py  bamboo_commands.py  high_level_functions.py  manipulate_bamboo_json.py  prettyprint_functions.py  requests.py
lib/bamboo/: CMakeLists.txt  agents.py  authenticate.py  branches.py  jobs.py  permissions.py  plan_branches.py  plans.py  requirements.py  results.py  tasks.py  variables.py
